<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginBottom="@dimen/_2sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/black"
                android:text="@string/guest_configuration"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_2sdp">
                <EditText
                    android:id="@+id/guest_EDT_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="@dimen/_16sdp"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/fullname"
                    android:background="@drawable/style_edt_round_corners_with_border" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_2sdp">
                <EditText
                    android:id="@+id/guest_EDT_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:textSize="@dimen/_16sdp"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/phonenumber"
                    android:background="@drawable/style_edt_round_corners_with_border" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_2sdp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.Custom.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/guest_DDM_number_of_guests"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:hint="@string/number_of_guests_prompt"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_2sdp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.Custom.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/guest_DDM_categories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:hint="@string/category_prompt"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_2sdp">
                <EditText
                    android:id="@+id/guest_EDT_new_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="@dimen/_16sdp"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/new_category"
                    android:visibility="invisible"
                    android:background="@drawable/style_edt_round_corners_with_border" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="@dimen/_8sdp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_4sdp">
                <android.widget.Button
                    android:id="@+id/guest_BTN_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/style_btn_round_corners_blue">
                </android.widget.Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_4sdp">
                <android.widget.Button
                    android:id="@+id/guest_BTN_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_delete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/style_btn_round_corners_red">
                </android.widget.Button>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>