<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">
            <EditText
                android:id="@+id/signup_EDT_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_2sdp"
                android:hint="@string/fullname"
                android:background="@drawable/style_edt_round_corners_with_border" />

            <EditText
                android:id="@+id/signup_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_2sdp"
                android:hint="@string/email"
                android:background="@drawable/style_edt_round_corners_with_border" />


            <EditText
                android:id="@+id/signup_EDT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_2sdp"
                android:hint="@string/password"
                android:background="@drawable/style_edt_round_corners_with_border" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I agree to terms of service">

            </CheckBox>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>