<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    android:layout_margin="@dimen/_4sdp"
    android:layoutDirection="ltr">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_2sdp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/table_listitem_LAY_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/listitem_background">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/table_listitem_IMG_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/table_default" />
        </LinearLayout>
        <TextView
            android:id="@+id/table_listitem_TXT_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/table_listitem_LAY_cover"
            android:textColor="@color/listitem_fullname"
            android:textSize="@dimen/_16sdp"
            android:typeface="sans"
            android:text="@string/table_name" />
        <TextView
            android:id="@+id/table_listitem_TXT_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignEnd="@id/table_listitem_LAY_cover"
            android:layout_below="@id/table_listitem_LAY_cover"
            android:textColor="@color/listitem_fullname"
            android:textSize="@dimen/_16sdp"
            android:typeface="sans"
            android:text="@string/table_capacity"/>

        <TextView
            android:id="@+id/table_listitem_TXT_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_below="@id/table_listitem_TXT_name"
            android:layout_alignStart="@id/table_listitem_TXT_name"
            android:textColor="@color/listitem_category"
            android:textSize="@dimen/_10sdp"
            android:typeface="sans"
            android:text="@string/category_prompt"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>