<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:weightSum="100"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:orientation="vertical"
                    android:gravity="center">
                        <TextView
                            android:id="@+id/event_hall_LBL_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_hall_website"
                            android:textSize="@dimen/_20sdp"
                            android:textColor="@color/black" />
                        <TextView
                            android:id="@+id/event_hall_LNK_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_2sdp"
                            android:layout_gravity="center"
                            android:text="@string/event_hall_website"
                            android:textSize="@dimen/_16sdp"
                            android:textColorLink="@color/hyperlink"
                            android:autoLink="web"
                            android:linksClickable="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80"
                    android:orientation="vertical"
                    android:weightSum="100">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="@dimen/_2sdp">
                                <TextView
                                    android:id="@+id/event_hall_LBL_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:maxLines="2"
                                    android:ellipsize="end"
                                    android:textSize="@dimen/_16sdp"
                                    android:scrollbars="horizontal"
                                    android:padding="@dimen/_10sdp"
                                    android:hint="@string/hall_address"
                                    android:background="@drawable/style_edt_round_corners_with_border"
                                    android:autoLink="map"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="@dimen/_2sdp">
                                <TextView
                                    android:id="@+id/event_hall_LBL_phoneNumber"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="@dimen/_2sdp"
                                    android:maxLines="1"
                                    android:textSize="@dimen/_16sdp"
                                    android:textColorLink="@color/hyperlink"
                                    android:textDirection="ltr"
                                    android:padding="@dimen/_10sdp"
                                    android:hint="@string/hall_phoneNumber"
                                    android:autoLink="phone"
                                    android:background="@drawable/style_edt_round_corners_with_border"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_2sdp"
                            android:layout_alignBottom="@id/event_hall_LBL_phoneNumber"
                            android:gravity="center"
                            android:layoutDirection="ltr">
                                <androidx.appcompat.widget.AppCompatRatingBar
                                    android:id="@+id/event_hall_WGT_rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:background="#61FFFFFF"
                                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                                    android:rating="4" />
                                <TextView
                                    android:id="@+id/event_hall_LBL_rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginHorizontal="@dimen/_4sdp"
                                    android:textSize="@dimen/_16sdp"
                                    android:text="4" />
                                <TextView
                                    android:id="@+id/event_hall_LBL_user_rating_total"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="(1500)"
                                    android:textSize="@dimen/_16sdp" />
                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="@dimen/_2sdp">

                                <ListView
                                    android:id="@+id/event_hall_LSTV_opening_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                        </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:padding="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:gravity="center">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:layout_marginHorizontal="@dimen/_4sdp">
                                <android.widget.Button
                                    android:id="@+id/event_hall_BTN_select"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/btn_select"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_12sdp"
                                    android:background="@drawable/style_btn_round_corners_blue">
                                </android.widget.Button>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:layout_marginHorizontal="@dimen/_4sdp">
                                <android.widget.Button
                                    android:id="@+id/event_hall_BTN_close"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/btn_close"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_12sdp"
                                    android:background="@drawable/style_btn_round_corners_red">
                                </android.widget.Button>
                        </LinearLayout>
                </LinearLayout>

        </LinearLayout>

</RelativeLayout>